[tool.poetry]
name = "namespace-repo-pof"
version = "0.1.0"
description = ""
authors = ["habust <90981952+habust@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "namespace_repo_pof"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
